Fixed header partial center alignment by removing white spaces using media queries

--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -47,6 +47,7 @@ body,
         width: 20px;
         margin-right: 5px;
         display: inline-block;
+        //for centering
         vertical-align: bottom;
       }
     }
@@ -361,4 +362,18 @@ body,
       margin: 0 auto;
     }
   }
+}
+
+//removing extra white space generated by framework in order for design to look the same on firefox
+@media only screen and (max-width: 596px) {
+    td.small-6, th.small-6 {
+        display: table-cell !important;
+        
+    }
+}
+
+@media only screen and (max-width: 596px) {
+    td.small-4, th.small-4 {
+        display: table-cell !important;   
+    }
 }
